2014-08-04  David Gilbert  <david.gilbert@object-refinery.com>

    Patch #312 by Ulrich Voigt:
    * org/jfree/chart/renderer/xy/XYAreaRenderer.java
    (drawItem): Restrict entity hotspot to within the plot area,
    * org/jfree/chart/renderer/xy/XYAreaRenderer2.java
    (drawItem): Restrict entity hotspot to within the plot area,
    * org/jfree/chart/renderer/xy/StackedXYAreaRenderer.java
    (drawItem): Restrict entity hotspot to within the plot area,
    * org/jfree/chart/renderer/xy/StackedXYAreaRenderer2.java
    (drawItem): Restrict entity hotspot to within the plot area.

----------  JFREECHART 1.0.19 RELEASED ------------------------

2014-07-29  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/axis/Axis.java
    (drawAxisLine): Add rendering hint,
    * org/jfree/chart/axis/CategoryAxis.java
    (drawTickMarks): Add rendering hint,
    * org/jfree/chart/axis/ValueAxis.java
    (drawAxisLine): Add rendering hint,
    (drawTickMarksAndLabels): Likewise,
    * org/jfree/chart/block/LineBorder.java
    (draw): Add rendering hint,
    * org/jfree/chart/plot/FastScatterPlot.java
    (drawDomainGridlines): Add rendering hint,
    (drawRangeGridlines): Likewise,
    * org/jfree/chart/plot/Plot.java
    (drawOutline): Add rendering hint,
    * org/jfree/chart/plot/XYPlot.java
    (drawDomainCrosshair): Add rendering hint,
    (drawRangeCrosshair): Likewise,
    * org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (drawRangeLine): Add rendering hint,
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (drawDomainLine): Add rendering hint,
    (drawRangeLine): Likewise.

2014-07-21  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/fx/FXGraphics2D.java
    (draw): Check KEY_STROKE_CONTROL hint for line and rectangle drawing.

2014-07-21  David Gilbert  <david.gilbert@object-refinery.com>

    Patch #307 by Ulrich Voigt:
    * org/jfree/chart/plot/FastScatterPlot.java